<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WeTongjiActivity!</string>
    <string name="app_name">WeTongji</string>
    <string name="page_dashboard">广场</string>
    <string name="page_setting">设置</string>
    <string name="page_alert">提醒</string>
    <string name="login_hit_username">输入学号</string>
    <string name="login_hit_password">输入密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="user_protocol_title">用户协议</string>
    <string name="user_protocol">1.本应用使用同济大学电子邮件系统进行实名认证。用户须使用自己的@tongji.edu.cn电子邮箱进行WeTongji账号激活操作。尚未注册邮箱的用户须访问mail.tongji.edu.cn先行完成邮箱的注册操作。本应用不对因同济大学电子邮件系统故障造成的影响负责。\n\n2.用户不得冒充他人登录，不得冒用他人的名义发布信息，不得使用本应用侵犯他人的利益、损害他人的名誉。微同济校园信息服务小组有权清除存在上述侵权行为的用户。\n\n3.本应用重视对用户个人隐私的保护。除法律或有法律赋予权限的部门要求或事先得到用户明确授权的情况外，本应用保证不对外公开或向第三方泄漏用户个人隐私信息及用户在使用本应用过程中产生的数据。\n\n4.本应用不保证所提供服务内容的及时性、安全性、准确性，也不对因提供的服务内容的谬误造成的影响负责。\n\n5.微同济校园信息服务小组对本协议的条款具有修改权和变更权，并有义务在协议内容发生变更时向用户提示。如不同意对本协议相关条款的修改，用户有权并应当停止使用本应用。\n\n6.微同济校园信息服务小组对本应用产生的统计信息具有所有权和使用权，并承诺在同济大学学生处的监督管理下通过正确的途径使用这些信息。</string>
    <string name="ensure_agree_user_protocol">确认用户协议</string>
    <string name="ensure">确认</string>
    <string name="ensure_user_protocol_dialog_message">我已阅读并同意用户协议。</string>
    <string name="cancle">取消</string>
    <string name="register">注册成功</string>
    <string name="register_email_title">您注册过@tongji.edu.cn吗？</string>
    <string name="register_email_link">我没注册过，带我去注册</string>
    <string name="register_email_introduce">每一个同济学子都可以免费激活一个@tongji.edu.cn邮箱，WeTongji也正是是通过向您的个人@tongji.edu.cn邮箱发送确认邮件来进行实名认证的。如果您还没有注册过，就赶快行动吧～</string>
    <string name="register_new_account_step1">注册新账号 (1/3)</string>
    <string name="register_new_account_step2">注册新账号 (2/3)</string>
    <string name="register_new_account_step3">注册新账号 (3/3)</string>
    <string name="input_name_hint">请输入姓名</string>
    <string name="input_number_hint">请输入学号</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="repeat_password_hint">请输入确认密码</string>
    <string name="basic_data">基本资料</string>
    <string name="name">姓名</string>
    <string name="student_num">学号</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="major_data">专业资料</string>
    <string name="entrance_year">入学年份</string>
    <string name="plan">学制</string>
    <string name="school">学院</string>
    <string name="major">专业</string>
    <string name="social_data">社交资料</string>
    <string name="telephone">手机</string>
    <string name="email">电子邮件</string>
    <string name="qq">QQ</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="register_success_title">注册成功</string>
    <string name="register_success_message">请登录你的同济大学邮箱查收验证邮件</string>
    <string name="login_success">登陆成功</string>
    <string name="zhuce">注册</string>
    <string name="input_account_hint">请输入账号</string>
    <string name="input_password_hint_least">请输入至少六位密码</string>
    <string name="input_password_pattern">密码只支持数字，字母和下划线</string>
    <string name="repeat_password_hint_again">请重新输入确认密码</string>
    <string name="modify_social_data">修改社交资料</string>
    <string name="personal_info">个人资料</string>
    <string name="modify_personal_info">修改个人资料</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

</resources>