<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView android:scrollbars="none" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        style="@style/Style_Scrollable">
        <LinearLayout android:orientation="vertical" 
            android:paddingLeft="10.0dip" 
            android:paddingTop="15.0dip" 
            android:paddingRight="10.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent">
            
            <TextView
                android:id="@id/tv_register_email_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_email_title"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black">
            </TextView>
            
            <include layout="@layout/include_divideline"/>
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_email_introduce"
                android:padding="10dp"
                android:textColor="@android:color/black">
            </TextView>
            
            <include layout="@layout/include_divideline"/>
                        
            <TextView
                android:id="@id/tv_register_email_link"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_email_link"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:clickable="true"
                android:textColor="@android:color/black">
            </TextView>
            
            <include layout="@layout/include_divideline"/>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>